fix checkbox default tick

--- a/quiz.html
+++ b/quiz.html
@@ -53,13 +53,7 @@
               <span class="options2">First option</span></span
             >
             <span class="op"
-              ><input
-                type="radio"
-                id="r3"
-                name="rate"
-                checked="checked"
-                value=""
-              />
+              ><input type="radio" id="r3" name="rate" value="" />
               <span class="options3">First option</span></span
             >
           </div>
